--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SubmissionAndroid2</string>
 
     <string name="menu_1">Menu 1</string>
+    <string name="menu_2">Menu 2</string>
     <string name="hint">Cari Username</string>
     <string name="cari">Cari</string>
     <string name="image_user">Image_user</string>
@@ -17,4 +18,6 @@
     <string name="tab_text_1">Follower</string>
     <string name="tab_text_2">Following</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="added">Satu item berhasil ditambahkan</string>
+    <string name="deleted">Satu item berhasil dihapus</string>
 </resources>
