--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="added">Satu item berhasil ditambahkan</string>
     <string name="deleted">Satu item berhasil dihapus</string>
+    <string name="menu_3">menu_3</string>
 </resources>
