--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="added">Satu item berhasil ditambahkan</string>
     <string name="deleted">Satu item berhasil dihapus</string>
     <string name="menu_3">menu_3</string>
+    <string name="username">username</string>
 </resources>
